--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
                 </tr>
                 <tr>
                     <td>Jazz</td>
-                    <td>Blue Moon</td>
+                    <td>
+                        <audio controls>
+                            <source src="Billie Holiday - Blue Moon.mp3" type="audio/mpeg">
+                        </audio>
+                    </td>
                 </tr>
                 <tr>
                     <td>Classical</td>
