--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 text-align: left;
                 border-collapse: collapse;
             }
+            audio {
+                height: 30px;
+            }
         </style>
     </section>
         <h1 id="top">HCI ASSIGNMENT-02</h1>
