--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <td>placeholder</td>
                 </tr>
                 <tr>
-                    <td>City Pop</td>
+                    <td>J-Pop</td>
                     <td>mayonaka no door</td>
                 </tr>
                 <tr></tr>
