--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <table style="width:100%">
                 <tr>
                     <td colspan="2" rowspan="3">
-                        #1 favorite music genre: &nbsp; &nbsp; &nbsp; &nbsp; <input type="form">
+                        #1 favorite music genre: &nbsp; &nbsp; &nbsp; &nbsq; &nbsqp; <input type="form">
                         <br> 
-                        (Genre) Favorite artist/song: &nbsp;<input type="form">
+                        (Genre) Favorite artist or song: <input type="form">
                     </td>
                     <th>Music genre</th>
                     <th>Sample</th>
