--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <td colspan="2" rowspan="3">
                         #1 favorite music genre: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <input type="form">
                         <br> 
-                        (Genre) Favorite artist or song: <input type="form">
+                        Genre Favorite artist or song: <input type="form">
                     </td>
                     <th>Music genre</th>
                     <th>Sample</th>
