--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <table style="width:100%">
                 <tr>
                     <td colspan="2" rowspan="3">
-                        #1 favorite music genre: &nbsp; &nbsp; &nbsp; &nbsp; <input type="form">
+                        #1 Favorite music genre: &nbsp; &nbsp; &nbsp; &nbsp; <input type="form">
                         <br> 
                         Genre Favorite artist or song: <input type="form">
                     </td>
