--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <table style="width:100%">
                 <tr>
                     <td colspan="2" rowspan="3">
-                        #1 Favorite music genre: &nbsp; &nbsp; &nbsp; &nbsp; <input type="form">
+                        #1 favorite music genre: &nbsp; &nbsp; &nbsp; &nbsp; <input type="form">
                         <br> 
                         Genre Favorite artist or song: <input type="form">
                     </td>
@@ -113,9 +113,9 @@
                 </tr>
                 <tr>
                 <td colspan="2" rowspan="3">
-                    #2 favorite music genre: &nbsp; &nbsp; &nbsp; <input type="form">
+                    #2 favorite music genre: &nbsp; &nbsp; &nbsp; &nbsp; <input type="form">
                     <br> 
-                    (Genre) Favorite artist/song: <input type="form">
+                    Genre Favorite artist or song: <input type="form">
                 </td>
                 <td>Pop</td>
                 <td>Laufey</td>
@@ -130,9 +130,9 @@
                 </tr>
                 <tr></tr>
                 <td colspan="2" rowspan="3">
-                    #3 favorite music genre: &nbsp; &nbsp; &nbsp; <input type="form">
+                    #3 favorite music genre: &nbsp; &nbsp; &nbsp; &nbsp; <input type="form">
                     <br> 
-                    (Genre) Favorite artist/song: <input type="form">
+                    Genre Favorite artist or song: <input type="form">
                 </td>
                 <td>Heavy Metal</td>
                 <td>Metallica(?)</td>
