--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <br><br>
                 <u class="time">When do you listen to music?</u>
                 <br>
-                <input type="checkbox"> When doing chores<input type="checkbox"> When doing work <input type="checkbox"> When sleeping 
+                <input type="checkbox"> When doing chores<input type="checkbox"> When doing work <input type="checkbox"> When studying
                 <br>
                 <input type="checkbox"> When exercising/gym <input type="checkbox"> When driving/riding transport
                 <br><br>
@@ -104,12 +104,18 @@
                     <td>
                         <audio controls>
                             <source src="Billie Holiday - Blue Moon.mp3" type="audio/mpeg">
+                            This browser does not support this audio format
                         </audio>
                     </td>
                 </tr>
                 <tr>
                     <td>Classical</td>
-                    <td>placeholder</td>
+                    <td>
+                        <audio controls>
+                            <source src="Johann Sebastian Bach-Air on G String.mp3" type="audio/mpeg">
+                            This browser does not support this audio
+                        </audio>
+                    </td>
                 </tr>
                 <tr>
                 <td colspan="2" rowspan="3">
@@ -118,15 +124,30 @@
                     Genre Favorite artist or song: <input type="form">
                 </td>
                 <td>Pop</td>
-                <td>Laufey</td>
+                <td>
+                    <audio controls>
+                        <source src="Olivia Rodrigo - bad idea right_ (Official Lyric Video).mp3" type="audio/mpeg">
+                        This browser does not support this audio type
+                    </audio>
+                </td>
                 </tr>
                 <tr>
                     <td>K-pop</td>
-                    <td>placeholder</td>
+                    <td>
+                        <audio controls>
+                            <source src="NewJeans (뉴진스) 'OMG' Official MV (Performance ver.1).mp3" type="audio/mpeg">
+                            This browser does not support this audio type
+                        </audio>
+                    </td>
                 </tr>
                 <tr>
                     <td>J-Pop</td>
-                    <td>mayonaka no door</td>
+                    <td>
+                        <audio controls>
+                            <source src="ネクライトーキーMV「北上のススメ」.mp3" type="audio/mpeg">
+                            This browser does not support this audio type
+                        </audio>
+                    </td>
                 </tr>
                 <tr></tr>
                 <td colspan="2" rowspan="3">
@@ -135,14 +156,29 @@
                     Genre Favorite artist or song: <input type="form">
                 </td>
                 <td>Heavy Metal</td>
-                <td>Metallica(?)</td>
+                <td>
+                    <audio controls>
+                        <source src="Enter Sandman (Remastered).mp3" type="audio/mpeg">
+                        This browser does not support this audio format
+                    </audio>
+                </td>
                 <tr>
                     <td>Rock</td>
-                    <td>placeholder</td>
+                    <td>
+                        <audio controls>
+                            <source src="Queen - We Are The Champions.mp3" type="audio/mpeg">
+                            This browser does not support this audio format
+                        </audio>
+                    </td>
                 </tr>
                 <tr>
                     <td>Rap</td>
-                    <td>placeholder</td>
+                    <td>
+                        <audio controls>
+                            <source src="Kanye West - POWER.mp3" type="audio/mpeg">
+                            This browser does not support this audio format
+                        </audio>
+                    </td>
                 </tr>
                 <tr>
                     <td colspan="2"><input type="submit"></td>
