--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             body {
                 background-image: url(https://cdn.discordapp.com/attachments/876767435309604943/1156794510131593257/jzEaWVx.png?ex=65164457&is=6514f2d7&hm=d9490daef42d86cbac424780029f8695ebf0246e2caef7dc6b7df9958a5e6969&);
                 background-repeat: no-repeat;
-                background-size: 100%;
+                background-size: cover;
                 background-attachment: fixed;
             }
             #User_Info {
