--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <br>
                 <input type="checkbox"> When exercising/gym <input type="checkbox"> When driving/riding transport
                 <br><br>
-                <input type="submit" name="submit">
+                <button type="submit">Submit</button>
             </form>
         </fieldset>
     </section>
